src/objects/PlusMScore__c.object
<CustomObject>
    <fields>
        <fullName>CardHolder__c</fullName>
        <label>CardHolder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PlusMScores</relationshipLabel>
        <relationshipName>PlusMScores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PLusMNumber__c</fullName>
        <label>PLusMNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PlusMScore</label>
    <nameField>
        <label>PlusMScore Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PlusMScores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>